avcodec/mjpegdec: fix yuv ljpeg prediction 5/6/7 with point transforms

Fixes Ticket2826

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>